[package]
name = "tendermint-proto"
version = "0.22.0"
authors = ["Informal Systems <hello@informal.systems>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/tendermint-rs/tree/master/proto"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "tendermint", "proto"]

description = """
    tendermint-proto is a the Rust implementation of the Tendermint proto structs.
    """

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { package = "informalsystems-prost", version = "0.8.1" }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1" }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
subtle-encoding = "0.5"
serde_bytes = "0.11"
num-traits = "0.2"
num-derive = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
flex-error = { version = "0.4.1", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std", "eyre_tracer"]
eyre_tracer = ["flex-error/eyre_tracer"]
std = [
    "flex-error/std"
]
