[package]
name       = "tendermint-proto"
version    = "0.39.0"
authors    = ["Informal Systems <hello@informal.systems>"]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/informalsystems/tendermint-rs/tree/main/proto"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "tendermint", "proto"]

description = """
    tendermint-proto is a the Rust implementation of the Tendermint proto structs.
    """

[features]
default = []
std = []
grpc = ["grpc-server"]
grpc-server = ["dep:tonic", "std"]
json-schema = ["dep:schemars", "std"]
borsh = ["dep:borsh"]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.13", default-features = false }
prost-types = { version = "0.13", default-features = false }
bytes = { version = "1.0", default-features = false, features = ["serde"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["hex", "base64", "alloc"] }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
flex-error = { version = "0.4.4", default-features = false }
tonic = { version = "0.12", optional = true }

## Optional: enabled by the `json-schema` feature
schemars = { version = "0.8", optional = true }

## Optional: enabled by the `borsh` feature
## For borsh encode or decode, needs to track `anchor-lang` and `near-sdk-rs` borsh version
borsh = { version = "1", default-features = false, features = ["derive"], optional = true }

## Optional: enabled by the `parity-scale-codec` feature
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["full"],   optional = true }
scale-info         = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
