[package]
name       = "tendermint-rpc-abci"
version    = "0.24.0-pre.1"
edition    = "2018"
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = [ "derive" ] }
tendermint = {version = "0.24.0-pre.1", default-features = false, path = "../tendermint" }
tendermint-proto = {version = "0.24.0-pre.1", default-features = false, path = "../proto" }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
subtle = { version = "2", default-features = false }

[dev-dependencies]
serde_json = { version = "1" }

[features]
default = ['std']
std = [
    'serde/std',
    "tendermint/std",
    "tendermint-proto/std",
    "subtle-encoding/std",
    "subtle/std",
]