[package]
name       = "tendermint-rpc"
version    = "0.33.2"
edition    = "2021"
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    tendermint-rpc contains the core types returned by a Tendermint node's RPC endpoint.
    All networking related features are feature guarded to keep the dependencies small in
    cases where only the core types are needed.
    """

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "tendermint-rpc"
path = "src/client/bin/main.rs"
required-features = [ "cli" ]

[features]
default = ["flex-error/std", "flex-error/eyre_tracer"]
cli = [
  "http-client",
  "structopt",
  "tracing-subscriber",
  "websocket-client"
]
http-client = [
  "futures",
  "reqwest",
  "tokio/macros",
  "tracing"
]
secp256k1 = [ "tendermint/secp256k1" ]
websocket-client = [
  "async-tungstenite",
  "futures",
  "tokio/rt-multi-thread",
  "tokio/fs",
  "tokio/macros",
  "tokio/sync",
  "tokio/time",
  "tracing"
]

[dependencies]
tendermint = { version = "0.33.2", default-features = false, path = "../tendermint" }
tendermint-config = { version = "0.33.2", path = "../config", default-features = false }
tendermint-proto = { version = "0.33.2", path = "../proto", default-features = false }

async-trait = { version = "0.1", default-features = false }
bytes = { version = "1.0", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
peg = { version = "0.7.0", default-features = false }
pin-project = { version = "1.0.1", default-features = false }
serde = { version = "1", default-features = false, features = [ "derive" ] }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
uuid = { version = "0.8", default-features = false }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
url = { version = "2.2", default-features = false }
walkdir = { version = "2.3", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
subtle = { version = "2", default-features = false }
semver = { version = "1.0", default-features = false }

# Optional dependencies
async-tungstenite = { version = "0.23", default-features = false, features = ["tokio-runtime", "tokio-rustls-native-certs"], optional = true }
futures = { version = "0.3", optional = true, default-features = false }
reqwest = { version = "0.11.20", optional = true, default-features = false, features = ["rustls-tls-native-roots"] }
structopt = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1.0", optional = true, default-features = false, features = ["rt-multi-thread"] }
tracing = { version = "0.1", optional = true, default-features = false }
tracing-subscriber = { version = "0.2", optional = true, default-features = false, features = ["fmt"] }

[dev-dependencies]
http = { version = "0.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
tokio-test = { version = "0.4", default-features = false }
