[package]
name       = "tendermint-std-ext"
version    = "0.30.0"
edition    = "2021"
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["development-tools"]
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    tendermint-std-ext contains extensions to the Rust standard library for use
    from tendermint-rs.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
