[package]
name        = "tendermint-lite"
version     = "0.1.0"
edition     = "2018"
license     = "Apache-2.0"
homepage    = "https://www.tendermint.com/"
repository  = "https://github.com/interchainio/tendermint-rs/tree/master/lite"
readme      = "../README.md"
categories  = ["cryptography", "client"]
keywords    = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
description = "TODO(xla): Add proper description."

authors     = ["Ethan Buchman <ethan@coinculture.info>"]

[dependencies]
tendermint = { path = "../tendermint" }
tokio = "0.2"
