[package]
name = "tendermint-lite"
version = "0.1.0"
authors = ["Ethan Buchman <ethan@coinculture.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = { path = "../tendermint" }

async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }
