[package]
name       = "tendermint"
version    = "0.2.0" # Also update `html_root_url` in lib.rs when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/tendermint/kms/tree/master/crates/tendermint"
readme     = "README.md"
categories = ["cryptography", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2018"

description = """
    Tendermint is a high-performance blockchain consensus engine that powers
    Byzantine fault tolerant applications written in any programming language.
    This crate provides types for representing information about Tendermint
    blockchain networks, including chain IDs, block IDs, and block heights.
    """

authors = [
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "ValarDragon <dojha12@gmail.com>",
    "Tony Arcieri <tony@iqlusion.io>",
    "Thane Thomson <thane@interchain.io>"
]

[badges]
circle-ci = { repository = "tendermint/kms" }

[dependencies]
byteorder = { version = "1.2", optional = true }
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.8"
failure = "0.1"
failure_derive = "0.1"
hkdf = { version = "0.7", optional = true }
prost-amino = { version = "0.4.0", optional = true }
prost-amino-derive = { version = "0.4.0", optional = true }
rand_os = { version = "0.1", optional = true }
ring = { version = "0.14", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version =  "1", optional = true }
signatory = { version = "0.11.1", optional = true, features = ["ed25519","ecdsa"] }
signatory-dalek = { version = "0.11", optional = true }
sha2 = { version = "0.8", optional = true, default-features = false }
subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
tai64 = { version = "1", optional = true, features = ["chrono"] }
x25519-dalek = { version = "0.4.4", optional = true, default-features = false, features = ["u64_backend"] }
zeroize = { version = "0.5.2", optional = true }

[features]
default = ["secret-connection", "serializers", "tai64"]
secret-connection = [
    "byteorder",
    "hkdf",
    "prost-amino",
    "prost-amino-derive",
    "rand_os",
    "ring",
    "signatory",
    "signatory-dalek",
    "sha2",
    "x25519-dalek",
    "zeroize"
]
serializers = ["serde", "serde_derive"]
