[package]
name = "tendermint-testgen"
version = "0.1.0"
authors = ["Andrey Kuprianov <andrey@informal.systems>"]
edition = "2018"

[dependencies]
tendermint = { path = "../tendermint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gumdrop = "0.8.0"
signatory = { version = "0.20", features = ["ed25519", "ecdsa"] }
signatory-dalek = "0.20"
simple-error = "0.2.1"

[[bin]]
name = "tendermint-testgen"
path = "bin/tendermint-testgen.rs"
