[package]
name       = "tendermint"
version    = "0.20.0" # Also update `html_root_url` in lib.rs and
                      # depending crates (rpc, light-node, ..) when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs/tree/master/tendermint"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2018"

description = """
    Tendermint is a high-performance blockchain consensus engine that powers
    Byzantine fault tolerant applications written in any programming language.
    This crate provides core types for representing information about Tendermint
    blockchain networks, including chain information types, secret connections,
    and remote procedure calls (JSON-RPC).
    """

authors = [
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "ValarDragon <dojha12@gmail.com>",
    "Tony Arcieri <tony@iqlusion.io>",
    "Thane Thomson <thane@informal.systems>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version = "1.0", default-features = false}
flex-error = { version = "0.3.0", default-features = false, features = ["anyhow_tracer"], git  = "https://github.com/DaviRain-Su/flex-error.git" }
async-trait = "0.1"
bytes = { version = "1.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ed25519 = { version = "1", default-features = false }
# use features (u64 backend)
ed25519-dalek = { version = "1", default-features = false, features = ["serde", "u64_backend"] }
# TODO(thane): Remove once https://github.com/myrrlyn/funty/issues/3 is fixed
funty = { version = "=1.1.0", default-features = false }
futures = { version = "0.3", default-features =  false }
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.3", default-features = false }
prost = { version = "0.7", default-features = false }
prost-types = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
# use features (alloc)
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false }
serde_repr = "0.1"
sha2 = { version = "0.9", default-features = false }
signature = { version = "1.2", default-features = false }
subtle = { version = "2", default-features = false }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
tendermint-proto = { version = "0.20.0", path = "../proto" }
toml = { version = "0.5" }
url = { version = "2.2" }
zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive", "alloc"] }
k256 = { version = "0.9", default-features = false, optional = true, features = ["ecdsa"] }
ripemd160 = { version = "0.9", default-features = false, optional = true }
sp-std = { version = "3.0.0", default-features = false}
displaydoc = {version = "0.2", default-features = false }


[features]
secp256k1 = ["k256", "ripemd160"]
default = ["std"]
std = [
    'bytes/std',
    'chrono/std',
    'ed25519-dalek/std',
    'funty/std',
    'futures/std',
    'num-traits/std',
    'once_cell/std',
    'prost/std',
    'serde/std',
    'serde_json/std',
    'serde_bytes/std',
    'sha2/std',
    'signature/std',
    'subtle/std',
    'subtle-encoding/std',
    'k256/std',
    'ripemd160/std',
    'sp-std/std',
    'flex-error/std',
    'anyhow/std',
    'displaydoc/std',
]

[dev-dependencies]
pretty_assertions = "0.7.2"
proptest = "0.10.1"
tendermint-pbt-gen = { path = "../pbt-gen" }
