[package]
name       = "tendermint"
version    = "0.23.6" # Also update `html_root_url` in lib.rs and
                               # depending crates (rpc, light-node, ..) when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs/tree/master/tendermint"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2018"

description = """
    Tendermint is a high-performance blockchain consensus engine that powers
    Byzantine fault tolerant applications written in any programming language.
    This crate provides core types for representing information about Tendermint
    blockchain networks, including chain information types, secret connections,
    and remote procedure calls (JSON-RPC).
    """

authors = [
    "Informal Systems <hello@informal.systems>",
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "ValarDragon <dojha12@gmail.com>",
    "Tony Arcieri <tony@iqlusion.io>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1.0", default-features = false }
ed25519 = { version = "1.3", default-features = false }
ed25519-dalek = { version = "1", default-features = false, features = ["u64_backend"] }
futures = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.3", default-features = false }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false }
serde_repr = { version = "0.1", default-features = false }
sha2 = { version = "0.9", default-features = false }
signature = { version = "1.2", default-features = false }
subtle = { version = "2", default-features = false }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
tendermint-proto = { version = "0.23.6", default-features = false, path = "../proto" }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive", "alloc"] }
flex-error = { version = "0.4.4", default-features = false }
k256 = { version = "0.10", optional = true, default-features = false, features = ["ecdsa", "sha256"] }
ripemd160 = { version = "0.9", default-features = false, optional = true }

[features]
default = ["std"]
std = ["flex-error/std", "flex-error/eyre_tracer", "clock"]
clock = ["time/std"]
secp256k1 = ["k256", "ripemd160"]

[dev-dependencies]
pretty_assertions = { version = "0.7.2", default-features = false }
proptest = { version = "0.10.1", default-features = false, features = ["std"] }
tendermint-pbt-gen = { path = "../pbt-gen", default-features = false, features = ["time"] }
