[package]
name        = "tendermint-test"
description = "Tendermint workspace tests and common utilities for testing."
version     = "0.23.0"
edition     = "2018"
license     = "Apache-2.0"
categories  = ["development", "test", "tools"]
repository  = "https://github.com/informalsystems/tendermint-rs"
keywords    = ["blockchain", "tendermint", "testing"]
readme      = "README.md"
authors     = ["Alexander Simmerl <a.simmerl@gmail.com>"]

[lib]
test = true

[dev-dependencies]
ed25519-consensus = { version = "1.2", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
flume = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["std"] }
readwrite = { version = "^0.1.1", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
x25519-dalek = { version = "1.1", default-features = false }

tendermint = { path = "../tendermint", default-features = false }
tendermint-p2p = { path = "../p2p", default-features = false }
tendermint-proto = { path = "../proto", default-features = false }
