[package]
name        = "tendermint-testgen"
version     = "0.21.0"
authors     = ["Informal Systems <hello@informal.systems>"]
edition     = "2018"
readme      = "README.md"
license     = "Apache-2.0"
homepage    = "https://www.tendermint.com/"
repository  = "https://github.com/informalsystems/tendermint-rs/tree/master/testgen"
keywords    = ["blockchain", "tendermint", "testing"]
categories  = ["cryptography::cryptocurrencies", "development-tools"]
description = """
    tendermint-testgen is a library and a small binary utility for generating 
    tendermint datastructures from minimal input (for testing purposes only).
    The library also contains some functionality to simplify running test batches.
    """

[dependencies]
tendermint = { version = "0.21.0", path = "../tendermint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "1"
gumdrop = "0.8.0"
simple-error = "0.2.1"
tempfile = "3.1.0"

[[bin]]
name = "tendermint-testgen"
path = "bin/tendermint-testgen.rs"
