[package]
name        = "tendermint-testgen"
version     = "0.35.1"
authors     = ["Informal Systems <hello@informal.systems>"]
edition     = "2021"
readme      = "README.md"
license     = "Apache-2.0"
homepage    = "https://www.tendermint.com/"
repository  = "https://github.com/informalsystems/tendermint-rs/tree/main/testgen"
keywords    = ["blockchain", "tendermint", "testing"]
categories  = ["cryptography::cryptocurrencies", "development-tools"]
description = """
    tendermint-testgen is a library and a small binary utility for generating
    tendermint datastructures from minimal input (for testing purposes only).
    The library also contains some functionality to simplify running test batches.
    """

[dependencies]
tendermint = { version = "0.35.1", path = "../tendermint", features = ["clock"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
ed25519-consensus = { version = "2", default-features = false }
gumdrop = { version = "0.8.0", default-features = false }
simple-error = { version = "0.3.0", default-features = false }
tempfile = { version = "3.1.0", default-features = false }
time = { package = "time", version = "0.3", default-features = false, features = ["std"] }

[[bin]]
name = "tendermint-testgen"
path = "bin/tendermint-testgen.rs"
